<resources>
    <string name="app_name">TravelBooking</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="loading">Loading...</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="client">Client</string>
    <string name="agence">Agence</string>
    <string name="detail_compte">Detail Compte</string>
    <string name="detail_utilisateur">Detail Utilisateur</string>
    <string name="sign_in">Sign In</string>
    <string name="registration">Creer un compte</string>
    <string name="detail_agence">Detail Agence</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="administration">Administration</string>
    <string name="title_activity_agence_main">AgenceMainActivity</string>
    <string name="valider">Valider</string>
    <string name="title_activity_creer_vol">CreerVolActivity</string>
    <string name="title_activity_administration">AdministrationActivity</string>
    <string name="title_activity_gerer_client">GererClientActivity</string>
    <string name="utilisateurs">Utilisateurs</string>
    <string name="vols">Vols</string>
    <string name="reservations">Reservations</string>
    <string name="session">Session</string>
    <string name="compte">Compte</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_list_vols">ListVolsActivity</string>
    <string name="title_activity_list_reservation">ListReservationActivity</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="nom_utilisateur">Nom Utilisateur</string>
    <string name="prenom_utilisateur">Prenom Utilisateur</string>
    <string name="email">Email</string>
    <string name="nom_agence">Nom Agence</string>
    <string name="title_activity_list_vol">ListVolActivity</string>
    <string name="num_vol">Num Vol</string>
    <string name="destination">Destination</string>
    <string name="duree">Duree</string>
    <string name="title_activity_creer_reserv">CreerReservActivity</string>
    <string name="title_activity_compte_client">CompteClientActivity</string>
    <string name="title_activity_compte_agence">CompteAgenceActivity</string>
    <string name="disponible">Disponible</string>
    <string name="etat_vol">Etat Vol:</string>
    <string name="prix">Prix</string>
    <string name="save">Save</string>
    <string name="delete">delete</string>
    <string name="title_activity_start_screen">StartScreenActivity</string>
    <string name="mon_compte">Mon Compte</string>
    <string name="visiteur">Visiteur</string>
    <string name="compte_utilisateur">Compte Utilisateur</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="reserver">Reserver</string>
    <string name="travel_booking">Travel Booking</string>
    <string name="depart">Depart</string>
    <string name="agence_pays">Pays</string>
    <string name="connexion">Connexion</string>
    <string name="title_activity_vol_view">VolViewActivity</string>
    <string name="nbr_places">nbr Places</string>
    <string name="date_depart">Date Depart</string>
    <string name="date_arrivee">Date Arrivee</string>
</resources>
