<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_flight"
            android:title="@string/vols" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_assignment"
            android:title="@string/reservations" />
    </group>


    <item android:title="@string/session">
        <menu>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/compte" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_close"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
