<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thephoenix_it.travelbooking.views.client.VolViewActivity"
    tools:showIn="@layout/activity_vol_view">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nom_agence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/nom_agence"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
            <TextView
                android:id="@+id/num_vol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/num_vol"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

            <TextView
                android:id="@+id/vol_depart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="Depart"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <TextView
                android:id="@+id/vol_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/destination"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

            <TextView
                android:id="@+id/nbr_places"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/nbr_places"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <TextView
                android:id="@+id/date_depart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/date_depart"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <TextView
                android:id="@+id/date_arrivee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/date_arrivee"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <TextView
                android:id="@+id/vol_prix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/prix"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <TextView
                android:id="@+id/vol_duree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/duree"
                android:visibility="invisible"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/etat_vol"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/disponible"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"   />
            </LinearLayout>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/btn_reserv_vol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reserver" android:visibility="invisible" />

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
