<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thephoenix_it.travelbooking.views.admin.GererClientActivity"
    tools:showIn="@layout/activity_gerer_client">
    <LinearLayout
        android:id="@+id/client_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/detail_compte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_compte"/>

        <EditText
            android:id="@+id/user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/login" />

        <EditText
            android:id="@+id/user_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <TextView
            android:id="@+id/detail_utilisateur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_utilisateur" />


        <EditText
            android:id="@+id/user_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/nom_utilisateur"/>

        <EditText
            android:id="@+id/user_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/prenom_utilisateur"/>

        <EditText
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Active" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
