<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thephoenix_it.travelbooking.views.agence.CreerVolActivity"
    tools:showIn="@layout/activity_creer_vol">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/num_vol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/num_vol"
                android:inputType="number" />

            <EditText
                android:id="@+id/vol_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/destination"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/vol_duree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/duree"
                android:inputType="time" />


                <EditText
                android:id="@+id/vol_prix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/prix"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/etat_vol" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/disponible" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/disponible" android:visibility="invisible" />
                </LinearLayout>

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/btn_reserv_vol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reserver" android:visibility="invisible" />

            </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
