<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thephoenix_it.travelbooking.RegistrationActivity">


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />
    <LinearLayout
        android:id="@+id/client_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/detail_compte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_compte"/>

                <EditText
                    android:id="@+id/client_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/login" />

                <EditText
                    android:id="@+id/client_password1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>

                <EditText
                    android:id="@+id/client_password2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>

                <TextView
                    android:id="@+id/detail_utilisateur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_utilisateur" />

                <EditText
                    android:id="@+id/client_nom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    android:hint="@string/nom_utilisateur"/>

                <EditText
                    android:id="@+id/client_prenom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    android:hint="@string/prenom_utilisateur"/>

                <EditText
                    android:id="@+id/client_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"/>
                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/valider" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/agence_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp"
            tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <TextView
                    android:id="@+id/agence_detail_compte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_compte"/>

                <EditText
                    android:id="@+id/agence_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/login"
                    android:inputType="textPersonName"
                    android:text="@string/login" />

                <EditText
                    android:id="@+id/agence_password1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>

                <EditText
                    android:id="@+id/agence_password2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/password" />

                <TextView
                    android:id="@+id/agence_detail_utilisateur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_agence" />


                <EditText
                    android:id="@+id/agence_nom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    android:hint="@string/nom_agence" />


                <EditText
                    android:id="@+id/agence_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" android:hint="@string/email" />

                <Button
                    android:id="@+id/agence_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/valider" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
