<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thephoenix_it.travelbooking.views.client.CreerReservActivity"
    tools:showIn="@layout/activity_creer_reserv">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="Client: "
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/num_vol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="Num Vol: "
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <TextView
                android:id="@+id/vol_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="Destination: "
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <TextView
                android:id="@+id/vol_duree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="Duree: "
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />


            <TextView
                android:id="@+id/vol_prix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="Prix"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/etat_vol"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <TextView
                    android:id="@+id/txtEtatVol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/disponible"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reservations"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                <TextView
                    android:id="@+id/txtEtatReserv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/etatReservRG"
                android:visibility="invisible"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/encours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="EnCours"/>
                <RadioButton android:id="@+id/annuler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Annuler"/>
                <RadioButton android:id="@+id/confirmer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Confirmer"/>
            </RadioGroup>

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
